fix(validator-management): increase gaps and media query for sync cards

--- a/src/pages/ValidatorManagement/validatorManagement.module.css
+++ b/src/pages/ValidatorManagement/validatorManagement.module.css
@@ -36,17 +36,17 @@
   justify-content: space-between;
   display: flex;
   flex-wrap: wrap;
-  gap: 8px;
+  gap: 12px;
 }
 
 .sync-status-cards-container {
   display: flex;
-  gap: 8px;
+  gap: 12px;
   flex-wrap: wrap;
   flex-direction: row;
 }
 
-@media (max-width: 790px) {
+@media (max-width: 810px) {
   .sync-status-cards-container {
     min-width: 100%;
   }
